# api/docs/swagger.json
@@ -1061,6 +1061,52 @@
                 }
             }
         },
+        "/user/verify-user": {
+            "post": {
+                "description": "Verifies a user using the verification code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Verify a user",
+                "parameters": [
+                    {
+                        "description": "User Verification Request",
+                        "name": "verifyUserReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userservice.VerifyUserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/userservice.VerifyUserRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/{id}": {
             "get": {
                 "description": "Retrieves details of a user by their ID",
@@ -1398,13 +1444,16 @@
                 "id": {
                     "type": "string"
                 },
-                "lastname": {
+                "img_url": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "role": {
                     "type": "string"
                 },
                 "updated_at": {
@@ -1493,7 +1542,7 @@
         "userservice.ForgotPasswordRes": {
             "type": "object",
             "properties": {
-                "mesage": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -1621,7 +1670,7 @@
                 "id": {
                     "type": "string"
                 },
-                "lastname": {
+                "img_url": {
                     "type": "string"
                 },
                 "name": {
@@ -1630,8 +1679,30 @@
                 "password": {
                     "type": "string"
                 },
+                "role": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "userservice.VerifyUserReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "sms_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "userservice.VerifyUserRes": {
+            "type": "object",
+            "properties": {
+                "Res": {
+                    "$ref": "#/definitions/userservice.UserModel"
                 }
             }
         }
